syntax = "proto3";

package go.micro.service.product;

service Product {
	rpc AddProduct(ProductInfo) returns (IDResponse) {}
	rpc FindProductByID(IDRequest) returns (ProductInfo) {}
	rpc UpdateProduct(ProductInfo) returns (ProductResponse) {}
	rpc DeleteProductByID(IDRequest) returns (ProductResponse) {}
	rpc FindAllProduct(AllRequest) returns (AllResponse) {}
}

message ProductInfo {
	int64 id = 1;
	string product_name = 2;
	string product_sku = 3;
	double product_price = 4;
	string product_description = 5;
	int64 product_category_id = 6;
	repeated ProductImage product_image = 7;
	repeated ProductSize product_size = 8;
	ProductSeo product_seo = 9;
}

message ProductImage {
	int64 id = 1;
	string image_name = 2;
	string image_code = 3;
	string image_url = 4;
}

message ProductSize {
	int64 id = 1;
	string size_name = 2;
	string size_code = 3;
}

message ProductSeo {
	int64 id = 1;
	string seo_title = 2;
	string seo_keywords = 3;
	string seo_description = 4;
	string seo_code = 5;
}

message IDResponse {
	int64 product_id = 1;
}

message IDRequest {
	int64 product_id = 1;
}

message ProductResponse {
	string message = 1;
}

message AllRequest {}

message AllResponse {
	repeated ProductInfo product_info = 1;
}








